--- a/app/views/parks/_maps.html.erb
+++ b/app/views/parks/_maps.html.erb
@@ -1,6 +1,3 @@
-<style type="text/css">
-  html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-</style>
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js">
 </script>
@@ -9,10 +6,13 @@
       function initialize() {
         var mapOptions = {
           center: { lat: 39.75, lng: -105},
-          zoom: 12
+          zoom: 12,
+          styles:[{"stylers":[{"saturation":-100}]},{"featureType":"water","elementType":"geometry.fill","stylers":[{"color":"#0099dd"}]},{"elementType":"labels","stylers":[{"visibility":"on"}]},{"featureType":"poi.park","elementType":"geometry.fill","stylers":[{"color":"#aadd55"}]},{"featureType":"road.highway","elementType":"labels","stylers":[{"visibility":"on"}]},{"featureType":"road.arterial","elementType":"labels.text","stylers":[{"visibility":"on"}]},{"featureType":"road.local","elementType":"labels.text","stylers":[{"visibility":"on"}]},{}]
         };
         var map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
+
+
       }
       google.maps.event.addDomListener(window, 'load', initialize);
 </script>
