finish adding div window on click event

--- a/app/assets/stylesheets/parks.scss
+++ b/app/assets/stylesheets/parks.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Parks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.park-pane {
+  background-color: red;
+  width: 25%;
+  height: 50%;
+  text-align: center;
+}
