white transparent pop up

--- a/app/views/parks/_maps.html.erb
+++ b/app/views/parks/_maps.html.erb
@@ -39,7 +39,7 @@
           },
           mapTypeControl: false,
           scaleControl: true,
-          streetViewControl: false,
+          streetViewControl: true,
           overviewMapControl: true,
           styles:[{"stylers":[{"saturation":-100}]},{"featureType":"water",
                                                      "elementType":"geometry.fill",
