style the park pop up

--- a/app/assets/stylesheets/parks.scss
+++ b/app/assets/stylesheets/parks.scss
@@ -22,6 +22,12 @@
 
 }
 
+.park-pane img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .park-pane h1 {
   text-align: center;
 }
