fixed varying heights on box

--- a/app/assets/stylesheets/parks.scss
+++ b/app/assets/stylesheets/parks.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .park-pane {
-  width: 350px;
-  height: 375px;
+  width: 25%;
+  // height: 375px;
   margin-top: 10px;
   font-size: 11px;
   position: relative;
