--- a/app/views/parks/_maps.html.erb
+++ b/app/views/parks/_maps.html.erb
@@ -4,6 +4,7 @@
 
 <% parks.each do |park| %>
   <div style="display:none" id="park-pane-<%=park.id%>" class="park-pane">
+    <button id="closeButton">close</button>
     <h2><%= park.formal_name %></h2>
     <h4><%= park.address_line1 %></h4>
     <img src=<%= "http://www.denvergov.org/portals/747/#{park.photo}" %> width="144" height="144" class="img-rounded"</img><hr>
@@ -15,6 +16,8 @@
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js">
 </script>
+
+
 
 <script type="text/javascript">
   function markerClick(marker) {
@@ -92,4 +95,10 @@
 
       };
       google.maps.event.addDomListener(window, 'load', initialize);
+
+      document.getElementById('closeButton').addEventListener('click', function(e) {
+        e.preventDefault();
+        this.parentNode.style.display = 'none';
+      }, false);
+
 </script>
