--- a/app/views/parks/_maps.html.erb
+++ b/app/views/parks/_maps.html.erb
@@ -4,7 +4,7 @@
 
 <% parks.each do |park| %>
   <div style="display:none" id="park-pane-<%=park.id%>" class="park-pane">
-    <button id="closeButton">close</button>
+    <button id="closeButton" class="close-button">X</button>
     <h2><%= park.formal_name %></h2>
     <h4><%= park.address_line1 %></h4>
     <img src=<%= "http://www.denvergov.org/portals/747/#{park.photo}" %> width="144" height="144" class="img-rounded"</img><hr>
@@ -15,13 +15,6 @@
 
 <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js">
-</script>
-
-<script type="text/javascript">
-      document.getElementById('closeButton').addEventListener('click', function(e) {
-        e.preventDefault();
-        this.parentNode.style.display = 'none';
-      }, false);
 </script>
 
 <script type="text/javascript">
@@ -37,6 +30,10 @@
     $(".park-pane").css(styles);
     $("#park-pane-"+marker.park.id).show();
   };
+
+  function clickClose(button) {
+  }
+
       function initialize() {
         var mapOptions = {
           center: { lat: 39.75, lng: -105},
@@ -95,9 +92,13 @@
                map.setCenter(this.getPosition());
                markerClick(this);
            });
+
           };
         }
 
+        $(".close-button").click(function() {
+          $(this).parent().hide()
+        });
       };
       google.maps.event.addDomListener(window, 'load', initialize);
 </script>
