add more info link

--- a/app/views/parks/_maps.html.erb
+++ b/app/views/parks/_maps.html.erb
@@ -7,6 +7,7 @@
     <h1><%= park.formal_name %></h1>
     <img src=<%= "http://www.denvergov.org/portals/747/#{park.photo}" %> width="144" height="144" class="img-rounded"</img>
     <p><%= park.facilities %></p>
+    <p><%= link_to  "More info", park_path(park), :target => "_blank" %></p>
   </div>
 <% end %>
 
