--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,3 +21,22 @@ html, body, #map-canvas {
   margin: 0;
   padding: 0;
 }
+
+@font-face{
+   font-family: 'Musket_bold';
+   src: font-url("Musket_bold.otf") unquote("format('opentype')");
+   font-weight: normal;
+   font-style: normal;
+}
+
+@font-face{
+   font-family: 'Musket_regular';
+   src: font-url("Musket_regular.otf") unquote("format('opentype')");
+   font-weight: normal;
+   font-style: normal;
+}
+
+body {
+  font-family: 'Masket_bold';
+  font-size: 2em;
+}
