--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -1,11 +1,14 @@
-<div id="title">
-  <h1>Mile High Parks</h1>
-</div>
 
-<div class="container">
-  <div class="text-center">
+<div class="container-navbar">
+  <div id="title">
+    <h1>Mile High Parks</h1>
+  </div>
+
+
+  <div class="text-center search-nav">
     <%= search_form_for @search, html: {class: "form-inline input-md"} do |f| %>
       <div class="field">
+        <h4>Search Facilities</h4>
         <%= f.collection_select :facilities_cont, Park::FACILITIES, :to_s, :to_s,
           { :include_blank => true }, {class: 'form-control'} %>
         <%= f.submit "Search", class: "btn btn-success btn-md",
