--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container-navbar">
   <div id="title">
-    <h1>mile high parks</h1>
+    <img src="<%= image_url('MHP_Logo_150px.png') %>" height='122'/>
   </div>
 
 
